# tv-db

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: ai.py  cli.py  config.py  db.py  demo.py  main.py  models.py  queue.py  security.py  worker.py
app/handlers/: series.py
app/routes/: admin.py  ai.py  auth.py  reports.py  series.py
app/services/: helpers.py  reports.py  series.py  users.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
scripts/: lint.sh  refresh.py  run.sh  start.sh
tests/: conftest.py  test_ai.py  test_auth.py  test_movies.py  test_refresh.py  test_reports.py  test_series.py
