[project]
name = "fastapi-tv-series"
version = "0.1.0"
description = "FastAPI TV series catalogue with SQLModel + SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "requests",
    "sqlmodel",
    "streamlit",
    "uvicorn",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
